# pyEdgeworthBox

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST  README.ipynb  README.md  README.rst  README.rst~  README.txt~  build.sh  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.py~
ex/: examples.txt
pyEdgeworthBox/: __init__.py  __init__.py~  pyEdgeworthBox.py  testEdgeworthBox.py~
pyEdgeworthBox/test/: testEdgeworthBox.py
