[tool.poetry]
name = "pyEdgeworthBox"
version = "0.1.9"
description = "calculate equilibrium, core, pareto effective allocation etc in the pure exchange economy, plot Edgeworth box (microeconomics"
authors = ["Maxim Litvak <maxim.litvak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
